# llm-docgen

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: base.md.j2.md
scripts/: test_parser.py
src/: __init__.py
src/llm_docgen/: cli.py
src/llm_docgen/cli/: commands.py
src/llm_docgen/parsers/: notebook_parser.py  python_parser.py
src/llm_docgen/templates/: api.md.j2  base.md.j2
src/llm_docgen/templating/: renderer.py
tests/: test_templating.py
tests/unit/: test_python_parser.py
