[tool.poetry]
name = "llm-docgen"
version = "0.1.0"
description = "Automated documentation generator for LLMs"
authors = ["Sodiq Muhammed"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
click = "^8.1.7"
Jinja2 = "^3.1.2"
pyyaml = "^6.0.1"
nbconvert = "^7.10.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
flake8 = "^6.1.0"
black = "^23.12.0"
pytest-cov = "^6.0.0"

[tool.poetry.scripts]
llm-docgen = "src.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"